--- a/src/renderer/html/index.html
+++ b/src/renderer/html/index.html
@@ -49,11 +49,6 @@
             </div>
             <div class="flex items-center space-x-2 self-end sm:self-center">
                 <button id="scanButton" class="px-4 py-1.5 text-sm bg-blue-500 hover:bg-blue-600 text-white rounded-md shadow-sm transition-colors whitespace-nowrap">スキャン開始</button>
-                <button id="showExportReport" title="エクスポート・レポート" class="p-1.5 rounded-md hover:bg-slate-200 transition-colors text-slate-600 hover:text-slate-800">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6">
-                        <path d="M14,2H6A2,2 0 0,0 4,4V20A2,2 0 0,0 6,22H18A2,2 0 0,0 20,20V8L14,2M18,20H6V4H13V9H18V20Z"/>
-                    </svg>
-                </button>
                 <button id="showProcessingLog" title="処理ログ" class="p-1.5 rounded-md hover:bg-slate-200 transition-colors text-slate-600 hover:text-slate-800">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6">
                         <path d="M14,2H6A2,2 0 0,0 4,4V20A2,2 0 0,0 6,22H18A2,2 0 0,0 20,20V8L14,2M18,20H6V4H13V9H18V20Z M9,12H15V14H9V12M9,16H15V18H9V16M9,8H15V10H9V8Z"/>
@@ -285,12 +280,6 @@
 
                 <!-- ファイル操作ボタン -->
                 <div class="flex space-x-2 mb-4">
-                    <button id="deleteSelected" class="px-4 py-2 bg-red-500 text-white rounded hover:bg-red-600 transition-colors disabled:opacity-50 disabled:cursor-not-allowed">
-                        削除
-                    </button>
-                    <button id="moveSelected" class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600 transition-colors disabled:opacity-50 disabled:cursor-not-allowed">
-                        移動
-                    </button>
                     <button id="copySelected" class="px-4 py-2 bg-green-500 text-white rounded hover:bg-green-600 transition-colors disabled:opacity-50 disabled:cursor-not-allowed">
                         コピー
                     </button>
@@ -312,18 +301,12 @@
             </div>
             <div class="footer-actions-responsive">
                 <!-- 通常タブ用アクションボタン -->
-                <div id="normalActions">
-                    <button id="trashBtn" class="flex items-center justify-center px-4 py-1.5 text-sm bg-amber-500 hover:bg-amber-600 text-white rounded-md shadow-sm transition-colors" disabled>
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-5 h-5 mr-1 -ml-1">
-                            <path d="M16 9v10H8V9h8m-1.5-6h-5l-1 1H5v2h14V4h-3.5l-1-1zM18 7H6v12c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7z"/>
-                        </svg>
-                        ゴミ箱へ
-                    </button>
+                <div id="normalActions" class="flex flex-row space-x-2">
                     <button id="deleteBtn" class="flex items-center justify-center px-4 py-1.5 text-sm bg-red-600 hover:bg-red-700 text-white rounded-md shadow-sm transition-colors" disabled>
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-5 h-5 mr-1 -ml-1">
                             <path d="M14.12 10.47L12 12.59l-2.13-2.12-1.41 1.41L10.59 14l-2.12 2.12 1.41 1.41L12 15.41l2.12 2.12 1.41-1.41L13.41 14l2.12-2.12-1.41-1.41zM15.5 4l-1-1h-5l-1 1H5v2h14V4h-3.5l-1-1zM6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12z"/>
                         </svg>
-                        完全に削除
+                        削除
                     </button>
                     <button id="moveBtn" class="flex items-center justify-center px-4 py-1.5 text-sm bg-sky-500 hover:bg-sky-600 text-white rounded-md shadow-sm transition-colors" disabled>
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-5 h-5 mr-1 -ml-1">
@@ -354,20 +337,6 @@
                     </button>
                 </div>
             </div>
-        </div>
-
-        <!-- パフォーマンス監視UI -->
-        <div id="performanceIndicator" class="performance-indicator">
-            <div>メモリ: <span id="memoryUsage">--</span>MB</div>
-            <div>FPS: <span id="fpsCounter">--</span></div>
-        </div>
-        
-        <!-- メモリ使用量表示 -->
-        <div id="memoryUsageDisplay" class="memory-usage" style="display: none;">
-            <strong>メモリ使用量:</strong> <span id="memoryUsageText">--</span>MB
-            <button id="cleanupMemory" class="ml-2 px-2 py-1 text-xs bg-blue-500 text-white rounded hover:bg-blue-600">
-                クリーンアップ
-            </button>
         </div>
 
         <!-- 高度なフィルタリングパネル -->
@@ -864,6 +833,46 @@
                                 <button id="showGuideAgain" class="px-4 py-2 bg-blue-100 text-blue-700 rounded-md hover:bg-blue-200">
                                     ガイダンスを再表示
                                 </button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- エクスポート・レポート設定 -->
+                    <div>
+                        <h3 class="text-lg font-medium text-slate-800 mb-4">エクスポート・レポート設定</h3>
+                        <div class="space-y-4">
+                            <div>
+                                <label class="block text-sm font-medium text-slate-700 mb-2">エクスポート形式</label>
+                                <select id="exportFormat" class="w-full px-3 py-2 border border-slate-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500">
+                                    <option value="csv">CSV</option>
+                                    <option value="json">JSON</option>
+                                    <option value="excel">Excel</option>
+                                </select>
+                            </div>
+                            <div>
+                                <label class="block text-sm font-medium text-slate-700 mb-2">エクスポート対象</label>
+                                <select id="exportTarget" class="w-full px-3 py-2 border border-slate-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500">
+                                    <option value="current">現在のタブ</option>
+                                    <option value="all">全タブ</option>
+                                    <option value="selected">選択アイテムのみ</option>
+                                </select>
+                            </div>
+                            <div>
+                                <label class="block text-sm font-medium text-slate-700 mb-2">含める情報</label>
+                                <div class="space-y-2">
+                                    <label class="flex items-center">
+                                        <input type="checkbox" id="includeMetadata" class="mr-2">
+                                        <span class="text-sm">メタデータ</span>
+                                    </label>
+                                    <label class="flex items-center">
+                                        <input type="checkbox" id="includeStatistics" class="mr-2">
+                                        <span class="text-sm">統計情報</span>
+                                    </label>
+                                    <label class="flex items-center">
+                                        <input type="checkbox" id="includeProcessingHistory" class="mr-2">
+                                        <span class="text-sm">処理履歴</span>
+                                    </label>
+                                </div>
                             </div>
                         </div>
                     </div>
