--- a/src/renderer/html/index.html
+++ b/src/renderer/html/index.html
@@ -86,8 +86,8 @@
 
         <!-- メインコンテンツエリア (3ペイン) -->
         <div class="flex-grow flex p-3 space-x-3 overflow-hidden">
-            <!-- 左ペイン: プレビューエリア -->
-            <div class="w-2/5 min-w-[300px] bg-white p-3 rounded-lg shadow flex flex-col space-y-2 overflow-y-auto">
+            <!-- 左ペイン: プレビューエリア (ブレ・エラータブ用) -->
+            <div id="previewPane" class="w-2/5 min-w-[300px] bg-white p-3 rounded-lg shadow flex flex-col space-y-2 overflow-y-auto">
                 <div id="previewAreaContainer" class="flex-grow bg-slate-100 rounded text-slate-500 text-sm min-h-[400px] sm:min-h-[500px] flex items-center justify-center border-2 border-dashed border-slate-300">
                     <div class="text-center">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-12 h-12 mx-auto mb-2">
@@ -107,8 +107,50 @@
                 </div>
             </div>
 
-            <!-- 中央ペイン: 結果リストエリア -->
-            <div class="w-3/5 min-w-[450px] bg-white rounded-lg shadow flex flex-col overflow-hidden">
+            <!-- 類似画像タブ専用: 画像1プレビューペイン -->
+            <div id="similarImage1Pane" class="w-1/3 min-w-[250px] bg-white p-3 rounded-lg shadow flex flex-col space-y-2 overflow-y-auto" style="display: none;">
+                <div class="text-sm font-medium text-slate-700 mb-2">画像1</div>
+                <div id="similarImage1Container" class="flex-grow bg-slate-100 rounded text-slate-500 text-sm min-h-[400px] sm:min-h-[500px] flex items-center justify-center border-2 border-dashed border-slate-300">
+                    <div class="text-center">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-12 h-12 mx-auto mb-2">
+                            <path d="M21 19V5c0-1.1-.9-2-2-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2zM8.5 13.5l2.5 3.01L14.5 12l4.5 6H5l3.5-4.5z"/>
+                        </svg>
+                        <p>類似画像ペアを<br>選択してください</p>
+                    </div>
+                </div>
+                <!-- 画像1情報表示エリア -->
+                <div id="similarImage1InfoArea" class="text-xs text-slate-600 space-y-1 pt-2 border-t border-slate-200 mt-2">
+                    <p><span class="font-medium">ファイル名:</span> <span id="similarImage1FileName" class="truncate block"></span></p>
+                    <p><span class="font-medium">パス:</span> <span id="similarImage1FilePath" class="truncate block" title=""></span></p>
+                    <p><span class="font-medium">解像度:</span> <span id="similarImage1Resolution"></span></p>
+                    <p><span class="font-medium">ファイルサイズ:</span> <span id="similarImage1FileSize"></span></p>
+                    <p><span class="font-medium">更新日時:</span> <span id="similarImage1ModifiedDate"></span></p>
+                </div>
+            </div>
+
+            <!-- 類似画像タブ専用: 画像2プレビューペイン -->
+            <div id="similarImage2Pane" class="w-1/3 min-w-[250px] bg-white p-3 rounded-lg shadow flex flex-col space-y-2 overflow-y-auto" style="display: none;">
+                <div class="text-sm font-medium text-slate-700 mb-2">画像2</div>
+                <div id="similarImage2Container" class="flex-grow bg-slate-100 rounded text-slate-500 text-sm min-h-[400px] sm:min-h-[500px] flex items-center justify-center border-2 border-dashed border-slate-300">
+                    <div class="text-center">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-12 h-12 mx-auto mb-2">
+                            <path d="M21 19V5c0-1.1-.9-2-2-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2zM8.5 13.5l2.5 3.01L14.5 12l4.5 6H5l3.5-4.5z"/>
+                        </svg>
+                        <p>類似画像ペアを<br>選択してください</p>
+                    </div>
+                </div>
+                <!-- 画像2情報表示エリア -->
+                <div id="similarImage2InfoArea" class="text-xs text-slate-600 space-y-1 pt-2 border-t border-slate-200 mt-2">
+                    <p><span class="font-medium">ファイル名:</span> <span id="similarImage2FileName" class="truncate block"></span></p>
+                    <p><span class="font-medium">パス:</span> <span id="similarImage2FilePath" class="truncate block" title=""></span></p>
+                    <p><span class="font-medium">解像度:</span> <span id="similarImage2Resolution"></span></p>
+                    <p><span class="font-medium">ファイルサイズ:</span> <span id="similarImage2FileSize"></span></p>
+                    <p><span class="font-medium">更新日時:</span> <span id="similarImage2ModifiedDate"></span></p>
+                </div>
+            </div>
+
+            <!-- 中央ペイン: 結果リストエリア (ブレ・エラータブ用) -->
+            <div id="resultsPane" class="w-3/5 min-w-[450px] bg-white rounded-lg shadow flex flex-col overflow-hidden">
                 <!-- タブUI -->
                 <div class="flex border-b border-slate-200 px-2 pt-2">
                     <button data-tab="blur" class="tab-button tab-active py-2 px-3 sm:px-4 text-xs sm:text-sm font-medium text-slate-600 border-b-2 border-transparent hover:border-blue-500 hover:text-blue-500 transition-colors">ブレ画像 (<span id="countBlur">0</span>)</button>
@@ -136,8 +178,17 @@
                 </div>
             </div>
 
-            <!-- 右ペイン: エラータブ専用フィルターパネル -->
-            <!-- エラータブ専用フィルターパネルを削除 -->
+            <!-- 類似画像タブ専用: テーブルペイン -->
+            <div id="similarTablePane" class="w-1/3 min-w-[400px] bg-white rounded-lg shadow flex flex-col overflow-hidden" style="display: none;">
+                <div class="flex border-b border-slate-200 px-2 pt-2">
+                    <div class="text-sm font-medium text-slate-700 py-2">類似画像リスト</div>
+                </div>
+                <div id="contentSimilarTable" class="flex-grow overflow-auto p-1">
+                    <div class="text-center text-slate-500 py-8">
+                        スキャンを開始してください
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!-- フッターエリア -->
